@@ -31,7 +31,6 @@ A2LIB_OBJECTS = \
     md_acme_authz.c \
     md_acme_drive.c \
     md_acme_order.c \
-    md_acmev1_drive.c \
     md_acmev2_drive.c \
     md_core.c \
     md_curl.c \
@@ -57,7 +56,6 @@ A2LIB_HFILES = \
     md_acme_authz.h \
     md_acme_drive.h \
     md_acme_order.h \
-    md_acmev1_drive.h \
     md_acmev2_drive.h \
     md_curl.h \
     md_crypt.h \
