@@ -1,3 +1,5 @@
+ * Removed support for ACMEv1 servers. The only known installation used to be Let's Encrypt
+   which is disabled that version more than a year ago.
  * Fixed a bug introduced by the multiple private key feature that did not trigger
    the tls-alpn-01 challenge at the ACME server on the first attempt. (It picked it up
    on the subsequent ones, though, prolonging the test suite but not failing it.)
